@@ -6,6 +6,7 @@ parent            = 0.234
 Class::Accessor   = 0.34
 Class::Load       = 0.22
 HTML::Accessors   = v0.13.0
+List::Util        = 1.42
 Pod::Xhtml        = 1.61
 PPI               = 1.220
 PPI::HTML         = 1.08
